--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,14 @@ services:
       DB_ADDRESS: ${DB_ADDRESS}
     depends_on:
       - db
-    volumes:
-      - ./exos:/var/www/html
+    develop:
+      watch:
+        - path: ./exos
+          target: /var/www/html
+          action: sync
+        - path: ./exos/Dockerfile
+          target: /var/www/html/Dockerfile
+          action: rebuild
   db:
     image: mysql:8.1.0
     environment:
