--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
     ports:
       - "8081:80" 
     environment:
-      DB_ADDRESS: ${DB_ADDRESS}
+      DB_ADDRESS: db
+      DB_PORT: 3306
+      DB_USER: root
+      DB_PASSWORD: ${DB_PASSWORD}
     depends_on:
       - db 
     develop:
@@ -18,7 +21,7 @@ services:
   db:
     image: mysql:8.1.0
     environment:
-      MYSQL_ROOT_PASSWORD: root_password 
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD} 
       MYSQL_DATABASE: lamp_db
     volumes:
       - ./mysql_data:/var/lib/mysql 
