--- a/ticketing/Dockerfile
+++ b/ticketing/Dockerfile
@@ -4,8 +4,13 @@ FROM php:8.2-apache
 RUN docker-php-ext-install pdo pdo_mysql
 RUN a2enmod rewrite
 
-# RUN echo "nameserver 192.168.1.115" > /etc/resolv.conf
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
+
 
 COPY . /var/www/html
+
+RUN composer install
+
+
 
 EXPOSE 80
